--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@tauri-apps/api": "^2.1.0"
 	}
 }
